stderr.txt
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hey' is not defined. Did you mean: 'hex'?
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'dasd' is not defined

KeyboardInterrupt
  File "<stdin>", line 1
    python RAG.py
           ^^^
SyntaxError: invalid syntax

KeyboardInterrupt

KeyboardInterrupt

KeyboardInterrupt

KeyboardInterrupt
